--- a/themes/inbeat/assets/scss/partials/_testimonial-influencer.scss
+++ b/themes/inbeat/assets/scss/partials/_testimonial-influencer.scss
@@ -143,6 +143,11 @@
 				margin-bottom: 1rem;
 				display: none;
 			}
+			.slide {
+				display: flex;
+				justify-content: center;
+				padding: 0px 42px;
+			}
 			.slick-track{
 				display: flex;
 				align-items: center;
